kernel: Allow unprivileged chroot by default
Commit 460b4b550dc9 ("Implement unprivileged chroot") added support for
chroot by unprivileged users, with sysctl
security.bsd.unprivileged_chroot to enable it.

We took a conservative path at introduction, leaving it disabled by
default, but are ready to enable it now.

References:

https://reviews.freebsd.org/D30939
https://reviews.freebsd.org/D30940
https://reviews.freebsd.org/D30130
https://bugs.freebsd.org/121073

Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D51702

--- a/lib/libsys/chroot.2
+++ b/lib/libsys/chroot.2
@@ -61,10 +61,10 @@ It should be noted that
 .Fn chroot
 has no effect on the process's current directory.
 .Pp
-This call is restricted to the super-user, unless the
+This call is restricted to the super-user if the
 .Ql security.bsd.unprivileged_chroot
-sysctl variable is set to 1
-and the process has enabled the
+sysctl variable is set to 0.
+Unprivileged use requires that the process has enabled the
 .Dv PROC_NO_NEW_PRIVS_CTL
 .Xr procctl 2 .
 .Pp
