Use 115200 bps by default for serial ports
For decades 9600 was the standard baud rate, but for many years now most
equipment has defaulted to 115200.

Relnotes:	YES
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D36295

--- a/usr.sbin/boot0cfg/boot0cfg.8
+++ b/usr.sbin/boot0cfg/boot0cfg.8
@@ -164,6 +164,7 @@ The default
 .Sq boot0
 image
 .It Pa /boot/boot0sio
+.\" XXX
 Image for serial consoles (COM1,9600,8,N,1,MODEM)
 .El
 .Sh EXIT STATUS
