--- a/usr.bin/login/login.1
+++ b/usr.bin/login/login.1
@@ -59,8 +59,9 @@ This option may only be used by the super-user or when an already
 logged in user is logging in as themselves.
 .It Fl h
 Specify the host from which the connection was received.
-It is used by various daemons such as
-.Nm telnetd .
+It was used by daemons such as
+.Nm telnetd
+and is retained for backwards compatibility.
 This option may only be used by the super-user.
 .It Fl p
 By default,
