--- a/usr.sbin/tzsetup/tzsetup.8
+++ b/usr.sbin/tzsetup/tzsetup.8
@@ -56,7 +56,7 @@ Do not create or symlink files.
 .It Fl r
 Reinstall the zoneinfo file installed last time.
 The name is obtained from
-.Pa /var/db/zoneinfo .
+.Pa /etc/timezone .
 .It Fl s
 Skip the initial question about adjusting the clock if not set to UTC.
 .Nm
@@ -105,6 +105,8 @@ current time zone file
 .It Pa /etc/wall_cmos_clock
 see
 .Xr adjkerntz 8
+.It Pa /etc/timezone
+saved name of the timezone file installed last
 .It Pa /usr/share/misc/iso3166
 mapping of ISO 3166 territory codes to names
 .It Pa /usr/share/zoneinfo
@@ -112,7 +114,7 @@ directory for zoneinfo files
 .It Pa /usr/share/zoneinfo/zone1970.tab
 mapping of timezone file to country and location
 .It Pa /var/db/zoneinfo
-saved name of the timezone file installed last
+legacy path for saved timezone name
 .El
 .Sh EXAMPLES
 Normal usage, to select the right zoneinfo file via the dialog-based
@@ -132,7 +134,7 @@ Install the zoneinfo file for Australia/Sydney, assumed to be located in
 .Pp
 After a reinstall of the zoneinfo files, you can reinstall the
 latest installed zoneinfo file (as specified in
-.Pa /var/db/zoneinfo ) :
+.Pa /etc/timezone ) :
 .Pp
 .Dl "# tzsetup -r"
 .Sh SEE ALSO
