Default clear_tmp_enable to YES
Using tmpfs is probably better, but otherwise I'm not sure why we
defaulted to NO.

--- a/share/man/man5/rc.conf.5
+++ b/share/man/man5/rc.conf.5
@@ -3773,8 +3773,8 @@ load System V IPC primitives at boot time.
 .It Va clear_tmp_enable
 .Pq Vt bool
 Set to
-.Dq Li YES
-to have
+.Dq Li NO
+to avoid having
 .Pa /tmp
 cleaned at startup.
 .It Va clear_tmp_X
