style: document // comments
Based on imp's D35960

--- a/share/man/man9/style.9
+++ b/share/man/man9/style.9
@@ -52,7 +52,7 @@ is silent on an issue.
 
 /* Most single-line comments look like this. */
 
-// Although they may look like this.
+// Single-line comments may also look like this.
 
 /*
  * Multi-line comments look like this.  Make them real sentences.  Fill
@@ -60,10 +60,8 @@ is silent on an issue.
  */
 .Ed
 .Pp
-C++ comments may be used in C and C++ code.
-Single-line comments should be consistently either C or C++ within a file.
-Multi-line comments should also be consistently either C or C++, but may differ
-from single-line comments.
+Comments starting with // may be used in both C and C++.
+Styles should not be mixed within a file or component.
 .Pp
 The copyright header should be a multi-line comment like so:
 .Bd -literal
