Deprecate fdc and floppy utilities
Floppies have been obsolete for over a decade.  Add a deprecation note
now and plan to remove support in 15.

Sponsored by:	The FreeBSD Foundation
Differential Revision: https://reviews.freebsd.org/D41549

--- a/share/man/man4/fdc.4
+++ b/share/man/man4/fdc.4
@@ -47,6 +47,12 @@ In
 .Cd hint.fd.1.at="fdc0"
 .Cd hint.fd.1.drive="1"
 .Cd hint.fd.1.flags="0x0"
+.Sh DEPRECATION NOTICE
+The
+.Nm
+driver is deprecated and may not be present in
+.Fx 15.0
+and later.
 .Sh DESCRIPTION
 .Ss Device Usage
 This driver provides access to floppy disk drives.
