--- a/usr.sbin/fdcontrol/fdcontrol.8
+++ b/usr.sbin/fdcontrol/fdcontrol.8
@@ -23,7 +23,7 @@
 .\" USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
 .\" DAMAGE.
 .\"
-.Dd April 7, 2017
+.Dd August 22, 2023
 .Dt FDCONTROL 8
 .Os
 .Sh NAME
@@ -37,6 +37,11 @@
 .Op Fl s Ar fmtstr
 .Op Fl v
 .Ar device
+.Sh DEPRECATION NOTICE
+.Nm
+is deprecated and may not be present in
+.Fx 15.0
+and later.
 .Sh DESCRIPTION
 The
 .Nm
