--- a/usr.sbin/fdread/fdread.1
+++ b/usr.sbin/fdread/fdread.1
@@ -24,7 +24,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"
-.Dd May 14, 2001
+.Dd August 22, 2022
 .Dt FDREAD 1
 .Os
 .Sh NAME
@@ -40,6 +40,11 @@
 .Op Fl d Ar device
 .Fl I Ar numsects
 .Op Fl t Ar trackno
+.Sh DEPRECATION NOTICE
+.Nm
+is deprecated and may not be present in
+.Fx 15.0
+and later.
 .Sh DESCRIPTION
 The
 .Nm
