--- a/usr.sbin/fdwrite/fdwrite.1
+++ b/usr.sbin/fdwrite/fdwrite.1
@@ -7,7 +7,7 @@
 .\" ----------------------------------------------------------------------------
 .\"
 .\"
-.Dd September 16, 1993
+.Dd August 22, 2023
 .Dt FDWRITE 1
 .Os
 .Sh NAME
@@ -19,6 +19,11 @@
 .Op Fl y
 .Op Fl f Ar inputfile
 .Op Fl d Ar device
+.Sh DEPRECATION NOTICE
+.Nm
+is deprecated and may not be present in
+.Fx 15.0
+and later.
 .Sh DESCRIPTION
 The
 .Nm
