--- a/lib/libc/stdlib/ptsname.3
+++ b/lib/libc/stdlib/ptsname.3
@@ -29,7 +29,7 @@
 .\" NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 .\" SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd October 14, 2023
+.Dd November 5, 2023
 .Dt PTSNAME 3
 .Os
 .Sh NAME
@@ -116,15 +116,10 @@ pointer is returned.
 The
 .Fn ptsname_r
 function returns the value 0 if successful;
-otherwise a nonzero value is returned and the global variable
+otherwise an error number is returned to indicate the error.
+The global variable
 .Va errno
-is set to indicate the error.
-Note:
-.Fn ptsname_r
-was previously documented as returning -1 on error.
-In the future it will be changed to return an error number, for POSIX
-compatibility.
-Therefore, callers should not check for -1.
+is also set to indicate the error.
 .Sh ERRORS
 The
 .Fn grantpt ,
