blocklistd rename in sshd (part)
Conflicts:
	crypto/openssh/auth-pam.c
	crypto/openssh/servconf.c
	crypto/openssh/servconf.h
	crypto/openssh/sshd.c

Conflicts:
	crypto/openssh/servconf.c
	crypto/openssh/servconf.h
	crypto/openssh/sshd.c

Conflicts:
	crypto/openssh/servconf.c

--- a/crypto/openssh/sshd_config.5
+++ b/crypto/openssh/sshd_config.5
@@ -2020,7 +2020,7 @@ The default
 is to never expire connections for having no open channels.
 This option may be useful in conjunction with
 .Cm ChannelTimeout .
-.It Cm UseBlacklist
+.It Cm UseBlocklist
 Specifies whether
 .Xr sshd 8
 attempts to send authentication success and failure messages
@@ -2029,11 +2029,9 @@ to the
 daemon.
 The default is
 .Cm no .
-For forward compatibility with an upcoming
-.Xr blacklistd
-rename, the
-.Cm UseBlocklist
-alias can be used instead.
+For backwards compatibility
+.Cm UseBlacklist
+is supported as an alias.
 .It Cm UseDNS
 Specifies whether
 .Xr sshd 8
