Remove some disklabel references
XXX incomplete

--- a/usr.sbin/fdformat/fdformat.8
+++ b/usr.sbin/fdformat/fdformat.8
@@ -177,8 +177,8 @@ exact cause of the error) will be printed for up to 10 errors after the
 entire formatting process has completed.
 .Sh SEE ALSO
 .Xr fdc 4 ,
-.Xr bsdlabel 8 ,
 .Xr fdcontrol 8 ,
+.Xr gpart 8 ,
 .Xr newfs 8 ,
 .Xr newfs_msdos 8
 .Sh HISTORY
