--- a/sbin/fdisk/fdisk.8
+++ b/sbin/fdisk/fdisk.8
@@ -497,7 +497,6 @@ The default boot code.
 .El
 .Sh SEE ALSO
 .Xr boot0cfg 8 ,
-.Xr bsdlabel 8 ,
 .Xr gpart 8 ,
 .Xr newfs 8
 .Sh HISTORY
@@ -534,5 +533,5 @@ causing difficulty to adjust.
 You cannot use this command to completely dedicate a disk to
 .Fx .
 The
-.Xr bsdlabel 8
+.Xr gpart 8
 command must be used for this.
