--- a/share/man/man5/disktab.5
+++ b/share/man/man5/disktab.5
@@ -127,7 +127,7 @@ file system, swap, etc)
 .El
 .Sh SEE ALSO
 .Xr getdiskbyname 3 ,
-.Xr bsdlabel 8 ,
+.Xr gpart 8 ,
 .Xr newfs 8
 .Sh HISTORY
 The
