stat(2): document AT_NO_AUTOMOUNT
Sponsored by:	The FreeBSD Foundation
MFC after:	1 week
Differential revision:	https://reviews.freebsd.org/D46710

--- a/lib/libsys/stat.2
+++ b/lib/libsys/stat.2
@@ -119,6 +119,8 @@ If
 is equal to
 .Dv AT_FDCWD ,
 operate on the current working directory.
+.It Dv AT_NO_AUTOMOUNT
+Do not auto-mount the last component name of the path.
 .El
 .Pp
 If
