arch.7: update for LLVM binutils

--- a/share/man/man7/arch.7
+++ b/share/man/man7/arch.7
@@ -304,7 +304,8 @@ as the default compiler on all supported CPU architectures,
 LLVM's
 .Xr ld.lld 1
 as the default linker, and
-LLVM binary utilities such as
+LLVM's
+binary utilities
 .Xr objcopy 1
 and
 .Xr readelf 1 .
