libc: Indicate functions removed in POSIX 2024
XXX move pthread out
XXX todo:
sighold sigignore siginterrupt sigpause sigrelse sigset tempnam
toascii _tolower _toupper ulimit utime

--- a/lib/libc/gen/ftw.3
+++ b/lib/libc/gen/ftw.3
@@ -263,6 +263,10 @@ and
 .Fn nftw
 functions conform to
 .St -p1003.1-2001 .
+The
+.Fn ftw
+function was removed in
+.St -p1003.1-2024 .
 .Sh HISTORY
 These functions first appeared in
 .At V.3 .
