--- a/lib/libc/gen/setjmp.3
+++ b/lib/libc/gen/setjmp.3
@@ -167,6 +167,12 @@ and
 .Fn siglongjmp
 functions conform to
 .St -p1003.1-88 .
+The
+.Fn _setjmp
+and
+.Fn _longjmp
+functions were removed in
+.St -p1003.1-2024 .
 .Sh HISTORY
 The
 .Fn setjmp
