--- a/lib/libc/locale/isascii.3
+++ b/lib/libc/locale/isascii.3
@@ -48,6 +48,11 @@ between 0 and octal 0177 inclusive.
 .Xr ctype 3 ,
 .Xr iswascii 3 ,
 .Xr ascii 7
+.Sh STANDARDS
+The
+.Fn isascii
+function was removed in
+.St -p1003.1-2024 .
 .Sh HISTORY
 The
 .Fn isascii
