--- a/lib/libc/stdlib/rand.3
+++ b/lib/libc/stdlib/rand.3
@@ -118,8 +118,9 @@ The
 function is not part of
 .St -isoC
 and is marked obsolescent in
-.St -p1003.1-2008 .
-It may be removed in a future revision of POSIX.
+.St -p1003.1-2008
+and removed in
+.St -p1003.1-2024 .
 .Sh CAVEATS
 Prior to
 .Fx 13 ,
