--- a/lib/libc/stdtime/ctime.3
+++ b/lib/libc/stdtime/ctime.3
@@ -335,6 +335,13 @@ The
 .Fn timegm
 function is not specified by any standard; its function cannot be
 completely emulated using the standard functions described above.
+.Pp
+The
+.Fn asctime_r
+and
+.Fn ctime_r
+functions were removed in
+.St -p1003.1-2024 .
 .Sh HISTORY
 This manual page is derived from
 the time package contributed to Berkeley by
