--- a/lib/libsys/getitimer.2
+++ b/lib/libsys/getitimer.2
@@ -185,6 +185,8 @@ recommending the use of
 and
 .Xr timer_settime 2
 instead.
+Both functions were removed in
+.St -p1003.1-2024 .
 .Sh HISTORY
 The
 .Fn getitimer
