--- a/lib/libsys/gettimeofday.2
+++ b/lib/libsys/gettimeofday.2
@@ -139,6 +139,8 @@ function is considered obsolescent and its usage discouraged by
 .\" XXX: This should be replaced in the future when an appropriate argument to
 .\" the St macro is available: -p1003.1-2017
 .No IEEE Std 1003.1-2008, 2017 Edition (\\(LqPOSIX.1\\(Rq) .
+It was removed entirely in
+.St -p1003.1-2024 .
 Applications should use the
 .Xr clock_gettime 2
 function instead.
