--- a/lib/libsys/setpgid.2
+++ b/lib/libsys/setpgid.2
@@ -105,3 +105,7 @@ The
 .Fn setpgid
 system call is expected to conform to
 .St -p1003.1-90 .
+The
+.Fn setpgrp
+function is removed in
+.St -p1003.1-2024 .
