src.conf.5: regen

--- a/share/man/man5/src.conf.5
+++ b/share/man/man5/src.conf.5
@@ -859,7 +859,7 @@ Disable the "retpoline" mitigation for CVE-2017-5715 in the kernel
 build.
 .Pp
 This is a default setting on
-arm/armv7, arm64/aarch64, powerpc/powerpc, powerpc/powerpc64, powerpc/powerpc64le and riscv/riscv64.
+arm/armv7, arm64/aarch64, powerpc/powerpc64, powerpc/powerpc64le and riscv/riscv64.
 .It Va WITH_KERNEL_RETPOLINE
 Enable the "retpoline" mitigation for CVE-2017-5715 in the kernel
 build.
