--- a/lib/libsys/chroot.2
+++ b/lib/libsys/chroot.2
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd August 2, 2025
+.Dd August 5, 2025
 .Dt CHROOT 2
 .Os
 .Sh NAME
@@ -64,9 +64,12 @@ has no effect on the process's current directory.
 This call is restricted to the super-user if the
 .Ql security.bsd.unprivileged_chroot
 sysctl variable is set to 0.
-Unprivileged use requires that the process has enabled the
+If enabled, unprivileged use also requires that the process has enabled the
 .Dv PROC_NO_NEW_PRIVS_CTL
-.Xr procctl 2 .
+.Xr procctl 2
+prior to the
+.Nm
+call.
 .Pp
 Depending on the setting of the
 .Ql kern.chroot_allow_open_directories
