vtnet.4: Expand the description a bit
Sponsored by:	The FreeBSD Foundation

--- a/share/man/man4/vtnet.4
+++ b/share/man/man4/vtnet.4
@@ -45,7 +45,8 @@ if_vtnet_load="YES"
 .Sh DESCRIPTION
 The
 .Nm
-device driver provides support for VirtIO Ethernet devices.
+device driver provides support for VirtIO Ethernet devices,
+as provided by many hypervisors and cloud providers.
 .Pp
 If the hypervisor advertises the appropriate features, the
 .Nm
